Fix email crop on Gmail
On desktop web Gmail client the email was getting cropped to the boundries of the header background gradient. This has now been fixed through a different setup using a background image on a table rather than a background gradient on a div.

--- a/src/assets/scss/partial-styles/Header-Intro.scss
+++ b/src/assets/scss/partial-styles/Header-Intro.scss
@@ -1,14 +1,13 @@
 .header {
   &__background-gradient {
-    width: 100%;
-    height: 415px;
-    background-color: $primary-color;
-    background-image: linear-gradient(
-      45deg,
-      $secondary-color 0%,
-      $primary-color 100%
-    );
-    background: linear-gradient(45deg, $secondary-color 0%, $primary-color 100%);
+    background-image: url('https://gallery.mailchimp.com/95b09f6a86b4c4551e15d7cc3/images/f2d29df3-89a6-4f7a-9281-0b8ed53928ee.jpg');
+    background: url('https://gallery.mailchimp.com/95b09f6a86b4c4551e15d7cc3/images/f2d29df3-89a6-4f7a-9281-0b8ed53928ee.jpg');
+    background-size: 100% 415px;
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    @include media {
+      background-size: 100% 300px!important;
+    }
 
     .browser-link {
       font-size: 13px;
